# dream-collections

./: Cargo.toml  README.md  justfile
i18n/en/: dream_collections.ftl
resources/: app.desktop  app.metainfo.xml
src/: app.rs  gql.rs  items.rs  main.rs
