[package]
name = "dream-collections"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
description = "MuDream Collection finder"
repository = "https://github.com/hepp3n/dream-collections"

[dependencies]
futures-util = "0.3.31"
i18n-embed = { version = "0.16", features = [
    "fluent-system",
    "desktop-requester",
] }
i18n-embed-fl = "0.10"
open = "5.3.2"
rust-embed = "8.8.0"
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0", features = ["derive", "rc"] }
ron = "0.12.0"
dirs = "6.0"
reqwest-graphql = "1.0.0"
gql_client = "1.0.8"
iced = { version = "0.13.1", features = [
	"tokio",
	"image",
	"svg",
] }


# Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }
